# Jobofcron

./: .gitignore  README.md  pyproject.toml
samples/: serpapi_demo_response.json
src/jobofcron/: __init__.py  application_automation.py  application_queue.py  cli.py  document_generation.py  job_history.py  job_matching.py  job_search.py  profile.py  scheduler.py  skills_inventory.py  storage.py  streamlit_app.py  worker.py
