[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobofcron"
version = "0.1.0"
description = "Toolkit for automating Indeed job applications"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Jobofcron"}]

[tool.setuptools.packages.find]
where = ["src"]
